# mkinvoice

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: test.yaml
example/: Makefile  invoice.toml
src/: error.rs  html.rs  invoice.rs  main.rs  pdf.rs  render.rs  style.css  types.rs
